<resources>
    <string name="app_name">Punnett Square</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <!-- End Example -->

    <!-- Theme -->
    <string name="pref_header_theme">Theme</string>
    <string name="pref_title_change_theme">Change Theme</string>

    <string-array name="pref_theme_list_titles">
        <item>Light</item>
        <item>Dark</item>
    </string-array>

    <string-array name="pref_theme_list_values">
        <item>0</item>
        <item>1</item>
    </string-array>

    <!-- About -->
    <string name="title_activity_about">About Us</string>
    <string name="pref_header_about">About</string>

    <string name="pref_about_about_title">About The App</string>
    <string name="pref_about_about_subtitle">A little info about the app</string>

    <string name="pref_about_version_title">Version</string>
    <string name="pref_about_version_subtitle">1.0.1</string>

    <string name="PS">Punnette Square</string>
    <string name="PS_C">The Punnett square is a diagram that is used to predict an outcome of a particular cross or breeding experiment. It is named after Reginald C. Punnett, who devised the approach. The diagram is used by biologists to determine the probability of an offspring having a particular genotype. The Punnett square is a tabular summary of possible combinations of maternal alleles with paternal alleles. These tables can be used to examine the genotypic outcome probabilities of the offspring of a single trait (allele), or when crossing multiple traits from the parents.</string>

    <string name="Mono">\nMonohybrid Cross</string>
    <string name="Mono_C">Mono means one, this cross indicates that we are examining a single trait being crossed. This could mean (for example) that we are looking at eye color. Each genetic locus is always represented by two letters. So, in the case of eye color, say "B = Brown eyes" and "b = green eyes". In this example, both parents have the genotype Bb. For the example of eye color, we stated above, this would mean they both have brown eyes. They can produce gametes that contain either the B or the b allele. (It is conventional in genetics to use capital letters to indicate dominant alleles and lower-case letters to indicate recessive alleles.) The probability of an individual offspring\'s having the genotype BB is 25\u0025, Bb is 50\u0025, and bb is 25\u0025. The ratio of the phenotypes is 3:1, typical for a monohybrid cross. When assessing phenotype from this, "3" of the offspring will exhibit the "Brown" eyes and only one offspring will exhibit the "green" eyes. (3 are "B_" and 1 is "bb"). \n(M = Maternal, P = Paternal)</string>

    <string name="Dihy">\nDihybrid Cross</string>
    <string name="Dihy_C">More complicated crosses can be made by looking at two or more genes. The Punnett square works, however, only if the genes are independent of each other, which means that having a particular allele of gene "A" does not alter the probability of possessing an allele of gene "B". This is equivalent to stating that the genes are not linked, so that the two genes do not tend to sort together during meiosis.

The following example illustrates a dihybrid cross between two double-heterozygote pea plants. R represents the dominant allele for shape (round), while r represents the recessive allele (wrinkled). A represents the dominant allele for color (yellow), while a represents the recessive allele (green). If each plant has the genotype RrAa, and since the alleles for shape and color genes are independent, then they can produce four types of gametes with all possible combinations: RA, Ra, rA, and ra.</string>

    <string name="sourceTitle">\nSource</string>
    <string name="sourceText"><u>https://en.wikipedia.org/wiki/Punnett_square</u></string>

    <string name="authorsTitle">\nAuthors</string>
    <string name="authors">
        Zack Braasch
        <i>
        \nApplication Struction / Fragments
        \nUI Design
        \nThemes
        \nAbout Section
        \nEaster Egg
        </i>
        \n\nDavid Keller
        <i>
        \nTrait computation functions
        </i>
        \n\nAndrew Chang
        <i>
        \nConsultant
        </i>
    </string>

    <!-- Version -->
    <string name="title_activity_version">Surprise!</string>
    <string name="dummy_button">Button</string>
    <string name="dummy_content"></string>

</resources>
