<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="net.piestudios.app.punnettsquare.AboutActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top|center"
            android:orientation="vertical">

            <TextView
                android:text="@string/PS"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewPS"
                android:layout_margin="1dp"
                android:gravity="center" />

            <TextView
                android:text="@string/PS_C"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:id="@+id/textViewPS_C"
                android:layout_margin="1dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:id="@+id/imageViewPS" />

            <TextView
                android:text="@string/Mono"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewMono"
                android:layout_margin="1dp"
                android:gravity="center" />

            <TextView
                android:text="@string/Mono_C"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:id="@+id/textViewMono_C"
                android:layout_margin="1dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:id="@+id/imageViewMono" />

            <TextView
                android:text="@string/Dihy"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewDihy"
                android:layout_margin="1dp"
                android:gravity="center" />

            <TextView
                android:text="@string/Dihy_C"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:id="@+id/textViewDihy_C"
                android:layout_margin="1dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:id="@+id/imageViewDihy" />

            <TextView
                android:text="@string/sourceTitle"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/sourceTitle"
                android:layout_margin="1dp"
                android:gravity="center" />

            <TextView
                android:text="@string/sourceText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:onClick="sourceLink"
                android:textColor="#0B0080"
                android:id="@+id/sourceText"
                android:layout_margin="1dp" />

            <TextView
                android:text="@string/authorsTitle"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/authorTitle"
                android:layout_margin="1dp"
                android:gravity="center" />

            <TextView
                android:text="@string/authors"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:id="@+id/authors"
                android:layout_margin="1dp" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>